# GameFrame

./: .gitignore  CMakeLists.txt  Game.h  GameMap.h  Utils.h  game.cpp  main.cpp  map.cpp  map1  map2  map3  utils.cpp
.cache/clangd/index/: Game.h.DEDCE3A2574E677C.idx  GameMap.h.6F204A44287C12AF.idx  Utils.h.ED9B29896CD8FD50.idx  game.cpp.15FE001F8D521528.idx  main.cpp.DA4F6358C9E2C2CA.idx  map.cpp.276BFD24C8B07908.idx  utils.cpp.5528DA725F460416.idx
include/: Actor.h  Animation.h  Bullet.h  Config.h  Enemy.h  Enums.h  Game.h  GameCamera.h  GameEntity.h  GameMap.h  GameObject.h  MgrAnima.h  MgrEntity.h  MgrInput.h  MgrMap.h  MgrTex.h  Player.h  Utils.h
map/: map1  map2  map3
res/map/: anima  map1  map2  map3
src/: Actor.cpp  Animation.cpp  Bullet.cpp  Enemy.cpp  Game.cpp  GameCamera.cpp  GameEntity.cpp  GameMap.cpp  MgrAnima.cpp  MgrEntity.cpp  MgrInput.cpp  MgrMap.cpp  MgrTex.cpp  Player.cpp  game.cpp
